--- a/src/FoursquairNew.mxml
+++ b/src/FoursquairNew.mxml
@@ -11,7 +11,7 @@
 	xmlns:notification="com.adobe.air.notification.*" 
 	xmlns:navigation="com.foursquare.views.navigation.*" 
 	xmlns:header="com.foursquare.views.header.*"
-	height="100%">
+	height="100%" xmlns:shout="com.foursquare.views.shout.*">
 
 	<fx:Style source="style/FourSquairStyle.css" />
 	
@@ -53,7 +53,8 @@
 						 horizontalCenter="0" verticalCenter="0" />
 
 		<s:VGroup width="100%" height="100%" excludeFrom="login">
-			<header:HeaderView id="header" width="100%" height="73" 
+			<header:HeaderView id="header" width="100%" height="73"
+							   
 							   styleName="headerSkin" />
 			<checkins:CheckinView	id="checkinView" includeIn="checkin" height="100%" width="100%" 
 							   	hideEffect="{viewStackTransitionEffect}"
@@ -65,20 +66,10 @@
 						   		hideEffect="{viewStackTransitionEffect}"
 						   		showEffect="{viewStackTransitionEffect}" />
 			
-			<s:HGroup width="100%" height="100" bottom="0">
-				<s:TextInput id="shoutText" width="100%"/>
-				<s:Button label="Shout" id="shoutSubmit" click="handleShout(shoutText.text)" />
-			</s:HGroup>
+			<shout:ShoutBox width="100%" height="30" bottom="0" />
+			<!--<s:Button label="Shout" id="shoutSubmit" click="handleShout(shoutText.text)" />-->
 		
 		</s:VGroup>
-		
-		<s:Group>
-			<s:HGroup width="100%">
-				<s:Label text="Logout" click="{logout()}" left="5" textDecoration="underline" excludeFrom="login"/>
-				<s:Label fontSize="11" text="v. {updater.installedVersion}" right="5"/>
-				<!--<mx:LinkButton label="Debug" id="debugButton" right="100"  paddingTop="0" paddingBottom="0" paddingLeft="0" paddingRight="0" fontWeight="normal" fontStyle="normal" textDecoration="underline"/>-->
-			</s:HGroup>
-		</s:Group>
 		
 	</s:VGroup>
 	
@@ -87,5 +78,5 @@
 		<!--<mx:SWFLoader id="splashLoadingIndicator" source="@Embed(source='assets/swf/foursquare_loader.swf')"
 					  width="16" height="16" autoLoad="true" horizontalCenter="0" verticalCenter="0"/>-->
 	</s:VGroup>
-	
+	<!--<s:Label fontSize="11" text="v. {updater.installedVersion}" right="5"/>-->
 </foursquare:FoursquareBase>
