--- a/src/com/foursquare/skins/login/GreyButtonSkin.mxml
+++ b/src/com/foursquare/skins/login/GreyButtonSkin.mxml
@@ -2,7 +2,7 @@
 <s:Skin xmlns:fx="http://ns.adobe.com/mxml/2009" 
 		xmlns:s="library://ns.adobe.com/flex/spark" 
 		xmlns:mx="library://ns.adobe.com/flex/halo"
-		width="148" height="35"
+		width="100%" height="100%"
 		alpha.disabled="0.5">
 
 	<fx:Declarations>
