--- a/src/com/foursquare/views/checkins/CheckinView.mxml
+++ b/src/com/foursquare/views/checkins/CheckinView.mxml
@@ -10,6 +10,5 @@
 	<s:List id="checkinList" width="100%" height="100%" styleName="checkinList"
 			itemRenderer="com.foursquare.views.checkins.CheckinItem"
 			/>
-		
-	<s:Button label="Check for new checkins" right="100" fontWeight="normal" click="getCheckins()"/>
+	<!--<s:Button label="Check for new checkins" right="100" fontWeight="normal" click="getCheckins()"/>-->
 </checkins:CheckinViewBase>
