--- a/src/FoursquairNew.mxml
+++ b/src/FoursquairNew.mxml
@@ -66,8 +66,7 @@
 						   		hideEffect="{viewStackTransitionEffect}"
 						   		showEffect="{viewStackTransitionEffect}" />
 			
-			<shout:ShoutBox width="100%" height="30" bottom="0" />
-			<!--<s:Button label="Shout" id="shoutSubmit" click="handleShout(shoutText.text)" />-->
+			<shout:ShoutBox shout="{handleShout(event)}" width="100%" height="30" bottom="0" />
 		
 		</s:VGroup>
 		
