--- a/src/com/foursquare/views/history/SingleDay.mxml
+++ b/src/com/foursquare/views/history/SingleDay.mxml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <s:SkinnableContainer xmlns:fx="http://ns.adobe.com/mxml/2009" 
 					  xmlns:s="library://ns.adobe.com/flex/spark" 
-					  xmlns:mx="library://ns.adobe.com/flex/halo" width="100%" maxHeight="200">
+					  xmlns:mx="library://ns.adobe.com/flex/halo" 
+					  width="100%" xmlns:history="com.foursquare.views.history.*">
 	<fx:Declarations>
 		<!-- Place non-visual elements (e.g., services, value objects) here -->
 	</fx:Declarations>
@@ -9,17 +10,28 @@
 	<fx:Script>
 		<![CDATA[
 			import mx.collections.ArrayCollection;
+			
+			import spark.components.Label;
 
-			private var _date:Date;
+			private var _date:String;
 			private var dateChanged:Boolean;
 			
 			private var _checkins:ArrayCollection;
 			private var checkinsChanged:Boolean;
 			
+			[SkinPart(required="true")]
+			[Bindable]
+			public var monthLabel:Label;
+
+			[SkinPart(required="true")]
+			[Bindable]
+			public var dayLabel:Label;
+			
 			override protected function commitProperties() : void{
 				if(dateChanged){
 					dateChanged = false;
-					dateLabel.text = date.month + "/" + date.date +"/"+ date.fullYear;
+					monthLabel.text = _date.slice(8, 11).toUpperCase();
+					dayLabel.text = _date.slice(5, 8);
 				}
 				if(checkinsChanged){
 					checkinsChanged = false;
@@ -39,12 +51,12 @@
 				invalidateProperties();
 			}
 
-			public function get date():Date
+			public function get date():String
 			{
 				return _date;
 			}
 
-			public function set date(value:Date):void
+			public function set date(value:String):void
 			{
 				_date = value;
 				dateChanged = true;
@@ -56,6 +68,7 @@
 	</fx:Script>
 	
 	<s:layout><s:HorizontalLayout /></s:layout>
-	<s:Label id="dateLabel" maxWidth="100" />
-	<s:List id="checkinList" width="100%" height="100%" />
+	
+	<history:SingleDayCheckinList id="checkinList" width="100%" height="100%" />
+
 </s:SkinnableContainer>
