--- a/src/FoursquairNew.mxml
+++ b/src/FoursquairNew.mxml
@@ -11,7 +11,7 @@
 	xmlns:notification="com.adobe.air.notification.*" 
 	xmlns:navigation="com.foursquare.views.navigation.*" 
 	xmlns:header="com.foursquare.views.header.*"
-	height="100%" xmlns:shout="com.foursquare.views.shout.*">
+	height="100%" xmlns:shout="com.foursquare.views.shout.*" xmlns:search="com.foursquare.views.search.*">
 
 	<fx:Style source="style/FourSquairStyle.css" />
 	
@@ -58,13 +58,16 @@
 							   styleName="headerSkin" />
 			<checkins:CheckinView	id="checkinView" includeIn="checkin" height="100%" width="100%" 
 							   	hideEffect="{viewStackTransitionEffect}"
-							   	showEffect="{viewStackTransitionEffect}"/>
+							   	showEffect="{viewStackTransitionEffect}" />
 			<history:HistoryView 	id="historyView" includeIn="history" height="100%" width="100%" 
 							 	hideEffect="{viewStackTransitionEffect}"
-							 	showEffect="{viewStackTransitionEffect}"/>
-			<venues:Venues 		id="venueView" includeIn="search" height="100%" width="100%" 
+							 	showEffect="{viewStackTransitionEffect}" />
+			<!--<venues:Venues 		id="venueView" includeIn="search" height="100%" width="100%" 
 						   		hideEffect="{viewStackTransitionEffect}"
-						   		showEffect="{viewStackTransitionEffect}" />
+						   		showEffect="{viewStackTransitionEffect}" />-->
+			<search:SearchView id="searchView" includeIn="search" height="100%" width="100%" 
+							   hideEffect="{viewStackTransitionEffect}"
+							   showEffect="{viewStackTransitionEffect}" />
 			
 			<shout:ShoutBox id="shoutBox" shout="{bounceShoutEvent(event)}" width="100%" height="30" bottom="0" />
 		
