--- a/src/com/foursquare/views/header/HeaderView.mxml
+++ b/src/com/foursquare/views/header/HeaderView.mxml
@@ -15,5 +15,14 @@
 				 fontSize="10" textDecoration="underline"/>
 	</s:HGroup>
 	<navigation:Navigation width="100%" top="31" height="30" />
-	<s:BitmapImage id="userImage" right="0" top="0" />
+	
+	<!--image with 1 px white border-->
+	<s:Group width="52" height="52" right="12" top="12">
+		<s:Rect width="100%" height="100%">
+			<s:stroke>
+				<s:SolidColorStroke color="0xffffff" />
+			</s:stroke>
+		</s:Rect>
+		<s:BitmapImage id="userImage" smooth="true" width="50" height="50" left="1" top="1" />
+	</s:Group>
 </s:SkinnableContainer>
