--- a/src/com/foursquare/views/history/SingleDay.mxml
+++ b/src/com/foursquare/views/history/SingleDay.mxml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <s:SkinnableContainer xmlns:fx="http://ns.adobe.com/mxml/2009" 
 					  xmlns:s="library://ns.adobe.com/flex/spark" 
-					  xmlns:mx="library://ns.adobe.com/flex/halo" 
+					  xmlns:mx="library://ns.adobe.com/flex/mx" 
 					  width="100%" xmlns:history="com.foursquare.views.history.*">
 	<fx:Declarations>
 		<!-- Place non-visual elements (e.g., services, value objects) here -->
@@ -13,6 +13,8 @@
 			
 			import spark.components.Label;
 
+			public var time:int;
+			
 			private var _date:String;
 			private var dateChanged:Boolean;
 			
