--- a/src/com/foursquare/skins/login/LoginViewSkin.mxml
+++ b/src/com/foursquare/skins/login/LoginViewSkin.mxml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <s:Skin xmlns:fx="http://ns.adobe.com/mxml/2009" 
 		xmlns:s="library://ns.adobe.com/flex/spark" 
-		xmlns:mx="library://ns.adobe.com/flex/halo" width="100%" height="100%">
+		xmlns:mx="library://ns.adobe.com/flex/mx" width="100%" height="100%">
 	<fx:Declarations>
 		<!-- Place non-visual elements (e.g., services, value objects) here -->
 	</fx:Declarations>
@@ -10,7 +10,7 @@
 		<s:State name="disabled" />
 	</s:states>
 	
-	<s:BitmapImage source="@Embed('assets/images/bg-login.png')" resizeMode="repeat" />
+	<s:BitmapImage source="@Embed('assets/images/bg-login.png')" />
 	
 	<s:Group id="contentGroup" left="0" right="0" top="0" bottom="0" minWidth="0" minHeight="0">
 		<s:layout>
