--- a/src/com/foursquare/views/header/HeaderView.mxml
+++ b/src/com/foursquare/views/header/HeaderView.mxml
@@ -2,7 +2,7 @@
 <s:SkinnableContainer 
 		xmlns:fx="http://ns.adobe.com/mxml/2009" 
 		 xmlns:s="library://ns.adobe.com/flex/spark" 
-		 xmlns:mx="library://ns.adobe.com/flex/halo"
+		 xmlns:mx="library://ns.adobe.com/flex/mx"
 		 xmlns:navigation="com.foursquare.views.navigation.*">
 	<fx:Script>
 		<![CDATA[
@@ -23,6 +23,6 @@
 				<s:SolidColorStroke color="0xffffff" />
 			</s:stroke>
 		</s:Rect>
-		<s:BitmapImage id="userImage" smooth="true" width="50" height="50" left="1" top="1" />
+		<mx:Image id="userImage" smoothBitmapContent="true" width="50" height="50" left="1" top="1" />
 	</s:Group>
 </s:SkinnableContainer>
