--- a/src/com/foursquare/views/search/SearchView.mxml
+++ b/src/com/foursquare/views/search/SearchView.mxml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <search:SearchViewBase xmlns:fx="http://ns.adobe.com/mxml/2009" 
 					   xmlns:s="library://ns.adobe.com/flex/spark" 
-					   xmlns:mx="library://ns.adobe.com/flex/halo"
+					   xmlns:mx="library://ns.adobe.com/flex/mx"
 					   xmlns:search="com.foursquare.views.search.*"
 					   width="100%" height="100%">
 	
@@ -13,7 +13,7 @@
 			import com.foursquare.models.vo.CityVO;
 
 			public function setCity(city:CityVO):void{
-				searchInput.text = "Popular Venues Near " + city.name;
+				cityLabel.text = "You're in " + city.name;
 			}
 			
 			private function onSearchClick(event:Event):void{
@@ -26,9 +26,11 @@
 		]]>
 	</fx:Script>
 	
+	<s:Label id="cityLabel" />
 	<s:Group width="100%" height="30">
 		<s:TextInput id="searchInput" focusIn="{searchInput.selectAll()}"
 					 enter="onSearchClick(event)"
+					 text="Search Popular Venues Nearby"
 					 width="100%" />
 		<s:Button id="searchButton"
 				  click="onSearchClick(event)"
