--- a/src/foursquair.mxml
+++ b/src/foursquair.mxml
@@ -3,7 +3,7 @@
 	xmlns="*"
 	xmlns:fx="http://ns.adobe.com/mxml/2009" 
 	xmlns:s="library://ns.adobe.com/flex/spark" 
-	xmlns:mx="library://ns.adobe.com/flex/halo"
+	xmlns:mx="library://ns.adobe.com/flex/mx"
 	
 	xmlns:views="com.foursquare.views.*"
 	xmlns:checkins="com.foursquare.views.checkins.*"
