--- a/src/com/foursquare/skins/shout/ShoutBarButtonSkin.mxml
+++ b/src/com/foursquare/skins/shout/ShoutBarButtonSkin.mxml
@@ -2,9 +2,13 @@
 <s:Skin xmlns:fx="http://ns.adobe.com/mxml/2009" 
 		xmlns:s="library://ns.adobe.com/flex/spark" 
 		xmlns:mx="library://ns.adobe.com/flex/mx">
-	<fx:Declarations>
-		<!-- Place non-visual elements (e.g., services, value objects) here -->
-	</fx:Declarations>
+	
+	<!-- host component -->
+	<fx:Metadata>
+		<![CDATA[ 
+		[HostComponent("spark.components.Button")]
+		]]>
+	</fx:Metadata>
 	
 	<s:states>
 		<s:State name="up" />
