--- a/src/com/foursquare/views/settings/SettingsView.mxml
+++ b/src/com/foursquare/views/settings/SettingsView.mxml
@@ -16,6 +16,7 @@
 			import spark.events.IndexChangeEvent;
 			[Bindable]
 			private var pollIntervals:ArrayCollection = new ArrayCollection([	
+													{label:'30 seconds',interval: 30000},
 													{label:'1 minute',	interval: 60000},
 													{label:'2 minutes',	interval: 120000},
 													{label:'5 minute', 	interval: 300000},
